# multi-module-example

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
